--- a/lasso.Rmd
+++ b/lasso.Rmd
@@ -1,8 +1,8 @@
 # L1 (lasso) regularization
 
-See Tibshirani (1996) for the source, or Murphy PML (2012) for a nice
+See Tibshirani (1996) for the original paper, or Murphy PML (2012) for a nice
 overview (watch for typos in depictions). A more conceptual depiction of the
-lasso can be found in penalized_ML.R.
+lasso can be found in the [penalized ML chapter][Penalized Maximum Likelihood].
 
 ## Data Setup
 
@@ -13,16 +13,16 @@ set.seed(8675309)
 
 N = 500
 p = 10
-X = scale(matrix(rnorm(N*p), ncol=p))
-b = c(.5, -.5, .25, -.25, .125, -.125, rep(0, p-6))
-y = scale(X %*% b + rnorm(N, sd=.5))
+X = scale(matrix(rnorm(N*p), ncol = p))
+b = c(.5, -.5, .25, -.25, .125, -.125, rep(0, p - 6))
+y = scale(X %*% b + rnorm(N, sd = .5))
 lambda = .1
 ```
 
 
 ## Functions
 
-Coordinate descent.
+Coordinate descent function.
 
 ```{r lasso}
 lasso <- function(
@@ -43,18 +43,19 @@ lasso <- function(
     out
   }
   
-  w = solve(crossprod(X) + diag(lambda, ncol(X))) %*% crossprod(X,y)
+  w  = solve(crossprod(X) + diag(lambda, ncol(X))) %*% crossprod(X,y)
   tol_curr = 1
-  J = ncol(X)
-  a = rep(0, J)
+  J  = ncol(X)
+  a  = rep(0, J)
   c_ = rep(0, J)
-  i = 1
+  i  = 1
   
   while (tol < tol_curr && i < iter) {
     w_old = w 
     a = colSums(X^2)
     l = length(y)*lambda  # for consistency with glmnet approach
     c_ = sapply(1:J, function(j)  sum( X[,j] * (y - X[,-j] %*% w_old[-j]) ))
+    
     if (soft) {
       for (j in 1:J) {
         w[j] = soft_thresh(c_[j]/a[j], l/a[j])
@@ -66,7 +67,9 @@ lasso <- function(
     }
     
     tol_curr = crossprod(w - w_old)  
+    
     i = i + 1
+    
     if (verbose && i%%10 == 0) message(i)
   }
   
@@ -79,18 +82,18 @@ lasso <- function(
 
 ## Estimation
 
-Note, if `lambda=0`, result is the same as  `lm.fit`.
+Note, if `lambda = 0`, i.e. no penalty, the result is the same as what you would get from the base R  <span class="func" style = "">lm.fit</span>.
 
 ```{r lasso-est}
-result_soft = lasso(
+fit_soft = lasso(
   X,
   y,
   lambda = lambda,
-  tol = 1e-12,
-  soft = TRUE
+  tol    = 1e-12,
+  soft   = TRUE
 )
 
-result_hard = lasso(
+fit_hard = lasso(
   X,
   y,
   lambda = lambda,
@@ -101,14 +104,15 @@ result_hard = lasso(
 
 
 
-`glmnet` is by default a mixture of ridge and lasso penalties, setting alpha
-= 1 reduces to lasso (alpha=0 would be ridge). We set the lambda to a couple
-values while only wanting the one set to the same lambda value as above (s).
+The <span class="pack" style = "">glmnet</span> approach is by default a mixture
+of ridge and lasso penalties, setting `alpha = 1` reduces to lasso (`alpha = 0`
+would be ridge). We set the lambda to a couple values while only wanting the one
+set to the same lambda value as above (`s`).
 
 ```{r lasso-glmnet}
 library(glmnet)
 
-glmnet_res = coef(
+fit_glmnet = coef(
   glmnet(
     X,
     y,
@@ -122,7 +126,7 @@ glmnet_res = coef(
 
 library(lassoshooting)
 
-ls_res = lassoshooting(
+fit_ls = lassoshooting(
   X = X,
   y = y,
   lambda = length(y) * lambda,
@@ -135,15 +139,18 @@ ls_res = lassoshooting(
 
 ## Comparison
 
-```{r lasso-compare}
+We can now compare the coefficients of all our results.
+
+```{r lasso-compare, echo=FALSE}
 data.frame(
   lm = coef(lm(y ~ . - 1, data.frame(X))),
-  lasso_soft = result_soft,
-  lasso_hard = result_hard,
-  lspack = ls_res$coef,
-  glmnet = glmnet_res[-1, 1],
+  lasso_soft = fit_soft,
+  lasso_hard = fit_hard,
+  lspack = fit_ls$coef,
+  glmnet = fit_glmnet[-1, 1],
   truth  = b
-)
+) %>% 
+  kable_df()
 ```
 
 
