--- a/newton-irls.Rmd
+++ b/newton-irls.Rmd
@@ -2,37 +2,41 @@
 
 
 
-Here we demonstrate Newton's and Iterated Reweighted Least Squares approaches via logistic regression.
+Here we demonstrate Newton's and Iterated Reweighted Least Squares approaches
+with a logistic regression model.
 
-
-For the following, I had Murphy's PML text open and more or less followed the 
-algorithms in chapter 8.  Note that for Newton's method, this doesn't
-implement a line search to find a more optimal stepsize at a given iteration.
+For the following, I had Murphy's PML text open and more or less followed the
+algorithms in chapter 8.  Note that for Newton's method, this doesn't implement
+a line search to find a more optimal stepsize at a given iteration.
 
 ## Data Setup
 
-Predict graduate school admission based on gre, gpa, and school rank
-(higher=more prestige). See corresponding demo here:
-https://stats.idre.ucla.edu/stata/dae/logistic-regression/. The only
-difference is that I treat rank as numeric rather than categorical.
+Predict graduate school admission based on gre, gpa, and school rank (higher is
+more prestige). See corresponding demo
+[here](https://stats.idre.ucla.edu/stata/dae/logistic-regression/). The only
+difference is that I treat rank as numeric rather than categorical.  We will be
+comparing results to base R <span class="func" style = "">glm</span> function,
+so I will use it to create the model data.
+
 
 ```{r newton-setup}
 library(tidyverse)
 
 admit = haven::read_dta('https://stats.idre.ucla.edu/stat/stata/dae/binary.dta')
 
-comparison_model = glm(admit ~ gre + gpa + rank, data = admit, family = binomial)
+fit_glm = glm(admit ~ gre + gpa + rank, data = admit, family = binomial)
 
-summary(comparison_model)
+# summary(fit_glm)
 
-X = model.matrix(comparison_model)
-y = comparison_model$y
+X = model.matrix(fit_glm)
+y = fit_glm$y
 ```
 
 
 
 
 ## Functions
+
 ### Newton's Method
 
 ```{r newton}
@@ -79,42 +83,12 @@ newton <- function(
     loglik = ll
   )
 }
-
 ```
-
-Compare to base R `glm`.
-
-```{r newton-compare}
-newton_result = newton(
-  X = X,
-  y = y,
-  stepsize = .9,
-  tol = 1e-8      # tol set to 1e-8 as in glm default
-) 
-
-newton_result
-comparison_model
-
-rbind(
-  newton = unlist(newton_result),
-  glm_default = c(
-    beta = coef(comparison_model),
-    comparison_model$iter,
-    tol = NA,
-    loglik = -logLik(comparison_model)
-  )
-)
-```
-
-
-
-
-
 
 ### IRLS 
 
-Note that `glm` is actually using IRLS, so the results from this should be
-fairly spot on.
+Note that <span class="func" style = "">glm</span> is actually using IRLS, so
+the results from this should be fairly spot on.
 
 ```{r irls}
 irls <- function(X, y, tol = 1e-12, iter = 500) {
@@ -134,7 +108,7 @@ irls <- function(X, y, tol = 1e-12, iter = 500) {
     mu   = plogis(eta)[,1]
     s    = mu * (1 - mu)
     S    = diag(s)
-    z    = eta + (y-mu)/s
+    z    = eta + (y - mu)/s
     beta = solve(t(X) %*% S %*% X) %*% (t(X) %*% (S %*% z))
     
     ll = sum(
@@ -142,7 +116,7 @@ irls <- function(X, y, tol = 1e-12, iter = 500) {
         y,
         prob = plogis(X %*% beta),
         size = 1,
-        log = T
+        log  = TRUE
       )
     )
     
@@ -159,46 +133,57 @@ irls <- function(X, y, tol = 1e-12, iter = 500) {
 }
 ```
 
-`tol` set to 1e-8 as in `glm` default.
+
+## Estimation
+
+```{r newton-est}
+fit_newton = newton(
+  X = X,
+  y = y,
+  stepsize = .9,
+  tol = 1e-8      # tol set to 1e-8 as in glm default
+) 
+
+fit_newton
+# fit_glm
+```
+
+
+`tol` set to 1e-8 as in <span class="func" style = "">glm</span> default.
 
 ```{r irls-est}
 irls_result = irls(X = X, y = y, tol = 1e-8) 
 
 str(irls_result)
-comparison_model
+# fit_glm
 ```
  
 
 
 ## Comparison
 
+
 Compare all results.
 
-```{r irls-compare}
+```{r irls-compare, echo=FALSE}
 rbind(
-  newton = unlist(newton_result),
+  newton = unlist(fit_newton),
   irls   = unlist(irls_result[-length(irls_result)]),
   glm_default = c(
-    beta = coef(comparison_model),
-    comparison_model$iter,
+    beta = coef(fit_glm),
+    fit_glm$iter,
     tol = NA,
-    loglik = logLik(comparison_model)
+    loglik = logLik(fit_glm)
   )
-)
-
-
-
+) %>% 
+  kable_df()
 ```
 
-Compare weights.
+Compare weights between the <span class="func" style = "">irls</span> and <span class="func" style = "">glm</span> results.
 
 ```{r irls-compare-weights}
-head(cbind(irls_result$weights,
-           comparison_model$weights))
+head(cbind(irls_result$weights, fit_glm$weights))
 ```
-
-
-
 
 
 
